examples/passing/NegativeIntInRange.purs
module Main where

import Prelude
import Effect.Console (log)

n :: Int
n = -2147483648

main = log "Done"
